tests/rules/samples/test_islabel.c
int	main(void)
{
	dummy(4);
	kikuti();
	return (0);
}

void	dummy(int n)
{
	if (n == 4)
		goto _4;
	if (n == 2) {
		goto _2;
	}
	goto end;
	_4:
	{
		write(1, "4", 1);
	}
	_2:
		write(1, "2", 1);
end:
	write(1, "\n", 1);
bla: return;
blo: printf(
	"NiumXp :D")
	 ; 
ble:(
	printf(
	"NiumXp :D"
	)
	)
;}

void	kikuti(void)
{
	int	i;

	i = 0;
loop:
	if (i < 10)
		goto loop;
	{
		{
		goto calcal;
		calcal:
	}
	while (1)
	{
		goto calcal;
	}
        if (1)
                goto calcal;
	}
}
